--- a/app/views/layouts/_head.haml
+++ b/app/views/layouts/_head.haml
@@ -28,3 +28,5 @@
 
   -# A tag for google webmaster site verification
   %meta{ name: "google-site-verification", content: "JUqB3tYmezYEJNAkw8MUdmIocAGztY85eaoNKBD5j0Q"}
+
+  = render :partial => "layouts/sumome_script"
